--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,6 @@
   },
   "minimum-stability": "dev",
   "require": {
-    "drupal/core": "^10.3",
-    "jacerider/neo_color": "^1"
+    "drupal/core": "^10.3"
   }
 }
