--- a/neo_build.info.yml
+++ b/neo_build.info.yml
@@ -3,5 +3,5 @@ type: module
 description: Build tools including Vite and Tailwind integration.
 package: Neo
 version: 1.0.0
-core_version_requirement: ^10.3
+core_version_requirement: ^10.3 || ^11
 php: 8.0
